ch-9 How SQL Injection Works

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -120,3 +120,43 @@ func main() {
 本部分将探索SQL注入模糊测试。攻击的这种变化不是更改每次输入的长度，而是通过定义的输入列表循环以尝试SQL注入。换句话来说就是，通过尝试由各种SQL元字符和语法组成的输入列表来混淆网站登录表单的username参数，如果后端数据库对其进行不安全的处理，则会导致应用程序产生异常行为。
 
 为简单起见，仅探测基于错误的SQL注入，忽略像boolean-, time-, 和 union-based等其他形式。这意味着，无需在响应内容或响应时间上寻找细微的差异，而在HTTP响应中查找错误消息以表明SQL注入。也意味着希望web服务保持运行状态，因此不能再依赖连接的建立来检验是否成功创建了异常行为。相反，需要在响应体中搜索数据库错误消息。
+
+#### SQL注入原理
+
+SQL注入的核心是，攻击者在语句中插入SQL元字符，从而有可能操纵查询以产生意外行为或返回受限的敏感数据。开发者盲目地将不受信任的用户数据连接到他们的SQL查询时，就会发生此问题，如以下伪代码所示：
+
+```go
+username = HTTP_GET["username"]
+query = "SELECT * FROM users WHERE user = '" + username + "'" result = db.execute(query)
+if(len(result) > 0) {
+    return AuthenticationSuccess()
+} else {
+    return AuthenticationFailed()
+}
+```
+
+伪代码中，变量username直接从HTTP参数中读取。该值未经过校验和验证。然后使用该值直接拼接到SQL查询语句中来构建查询字符串。程序查询数据库并检查结果。如果匹配到至少一条记录，则身份验证成功。只要提供的用户名由字母数字和某些特殊字符组成，该代码就应具有适当的行为。例如，提供用户名alice会是下面的安全查询：
+
+```SQL
+SELECT * FROM users WHERE user = 'alice'
+```
+
+但是，当用户名含单引号时会发生什么呢？提供用户名 `o'doyle` 会产生以下查询：
+
+```SQL
+SELECT * FROM users WHERE user = 'o'doyle'
+```
+
+这里的问题是后端数据库现在看到不平衡数量的单引号。注意前面查询的强调部分**`doyle`** ；后端数据库将其解释为SQL语法，因为它位于引号之外。当然，这是无效的SQL语法，并且后端数据库也不会处理。对于基于错误的SQL注入，会在HTTP响应中生成一个错误消息。消息本身将根据数据库而有所不同。MYSQL中会收到类型下面的的错误，可能还会包含其他详细信息，从而关闭查询本身：
+
+```SQL
+You have an error in your SQL syntax
+```
+
+尽管我们不会太深入地研究，但是现在可以操纵用户名输入来生成有效的SQL查询，该查询将绕过示例中的身份验证。输入 `' OR 1=1#`的用户名，恰好位于下面的SQL语句中：
+
+```SQL
+SELECT * FROM users WHERE user = '' OR 1=1#'
+```
+
+该输入在查询的末尾附加了逻辑 `OR`。该 `OR` 语句总是为真，因为1总是等于1。然后使用MySQL的注释（#）强制后端数据库忽略剩余的查询。这是有效的SQL语句。假设数据库中存在一行或多行数据，就可以绕过前面伪代码中的身份验证。
