ch-9 Porting Exploits to Go

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -262,3 +262,32 @@ $ go run main.go
 3. 预期依赖Go的 `net.http` 包来简化通信，不如尝试使用 `net` 包处理原生TCP连接。当使用 `net` 包时，需要注意 HTTP的 `Content-Length` 头，其标示消息体的长度。需要计算每次请求的准确长度，因为消息体长度会变。如果使用的是无效长度，服务器很可能会拒绝请求。
 
 下一节中，将介绍如何把漏洞开发从Python或C等其他语言移植到Go中。
+
+### 移植漏洞到Go中
+
+由于种种原因，需要将已存在的漏洞移植到Go中。可能现有的开发代码已被破坏、不完整或与目标系统或版本不兼容。虽然可以毫无疑问地使用原语言来扩展或更新损坏或未完成的代码，但是Go能提供容易的交叉编译，一致的语法和缩进规则以及强大的标准库。所有这些将使开发的代码具有更高的可移植性和可读性，而不会影响功能。
+
+移植现有漏洞程序时，可能最大的挑战是确定等效的Go库和函数调用以实现相同级别的功能。举个例子，解决字节序，编码和加密等价物可能需要一些研究，尤其是对于那些不熟悉Go的人。幸运的是，在前面的章节中已经解决了基于网络通信的复杂性。希望大家应该熟悉它的实现和细微差别。
+
+会发现无数种使用Go的标准库进行漏洞开发或移植的方法。对于我们来说，在一章中全面介绍这些包和用例是不现实的，建议通过 `https://golang.org/pkg/` 浏览Go的官方文档。文档内容丰富，有大量的好例子来帮助理解函数和包的用法。下面是一些在开发时可能会最感兴趣的包:
+
+**bytes** 提供低级字节操作
+**crypto** 实现各种对称和非对称加密和消息认证
+**debug** 检查各种文件类型的元数据和内容  
+
+**encoding** 使用各种常见形式（例如二进制，十六进制，Base64等）对数据进行编码和解码
+
+**io** **and** **bufio** 从各种通用接口类型(包括文件系统、标准输出、网络连接等)读写数据
+
+**net** 通过使用各种协议（例如HTTP和SMTP）方便客户端与服务器的交互
+
+**os** 执行本地操作系统并与之交互
+
+**syscall** 公开用于进行低级系统调用的接口
+
+**unicode**  使用UTF-16或UTF-8编码和解码数据
+
+**unsafe** 与操作系统进行交互时避免Go的类型安全检查很有用
+
+诚然，在后面的章节中，尤其是在我们讨论底层Windows交互时，其中一些包被证明更有用，但是我们已经包含了这个列表供查看。我们不会尝试详细介绍这些包，而是展示如何通过使用其中一些包来移植现有漏洞开发程序。
+
