ch-9 Porting an Exploit from Python

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -385,3 +385,23 @@ func jboss(host string, ssl bool, cmd string) (int, error) {
 
 该代码几乎逐行复制了Python版本。基于此，我们将注释设置为与Python对应的注释一致，因此可以按照我们所做的更改。
 
+首先，通过定义序列化的Java对象 `byte` 切片来构造有效负载，并在操作系统命令之前对该部分进行硬编码。不像Python版本那样依赖于用户定义的逻辑将十六进制字符串转换为 `byte` 数组，Go版本使用 ` encoding/hex` 包中的 `hex.DecodeString()` 。接下来，确定操作系统命令的长度，然后将其和命令本身附加到有效负载中。通过将硬编码的十六进制尾部字符串解码到现有有效负载上，即可完成有效负载的构造。此代码比Python版本稍微冗长一些，因为我们有意添加了额外的错误处理，但也可以使用Go的标准编码包轻松解码十六进制字符串。 
+
+继续初始化HTTP客户端，如果需要，可将其配置为SSL通信，然后构建POST请求。在发送请求之前，需要设置必要的HTTP头，以便JBoss服务器正确地解释内容类型。注意，没有明确地设置 `Content-Length` 的HTTP头。这是因为Go的http包会自动为你做这些。最后，调用 `client.Do(request)` 发送攻击请求。
+
+很大程度上，这段代码使用了已经学过的内容。该代码引入了一些小的修改，例如将SSL配置为忽略无效证书并添加特定的HTTP头。也许代码中的一个新颖的地方是使用 `hex.DecodeString()` ，这是一个Go核心函数，它将十六进制字符串转换为等价的字节表示形式。在Python中必须手动执行。表9-2是其他一些常见的Python和Go的等效函数或结构。
+
+这不是一个函数映射的全面列表。存在太多变化和边缘情况，无法涵盖移植漏洞程序需要的所有可能的函数。我们希望这将帮助您把至少一些最常见的Python函数转换为Go。
+
+表 9-2: 常用的 Python 和 Go 等效函数
+
+| Python                                  | Go                              | Notes                                                        |
+| --------------------------------------- | ------------------------------- | ------------------------------------------------------------ |
+| hex(*x*)                                | fmt.Sprintf("*%#x*", *x*)       | Converts an integer, x, to a lowercase hexadecimal string, prefixed with "0x". |
+| ord(*c*)                                | rune(*c*)                       | Used to retrieve the integer (int32) value of a single character. Works<br/> for standard 8-bit strings or multibyte Unicode. Note that rune is a built-in type in Go and makes working with ASCII and Unicode data fairly simple. |
+| chr(*i*) and unichr(*i*)                | fmt.Sprintf("*%+q*", rune(*i*)) | The inverse of ord in Python, chr and unichr return a string of length 1 for the integer input. In Go, you use the rune type and can retrieve it as a string by using the %+q format sequence. |
+| struct.pack(*fmt*, *v1*, *v2*, *. . .*) | binary.Write(*. . .*)           | Creates a binary representation of the data, formatted appropriately for type and endianness. |
+| struct.unpack(*fmt*, *string*)          | binary.Read(*. . .*)            | The inverse of struct.pack and binary. Write. Reads structured binary data into a specified format and type. |
+
+
+
